envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 8081 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: "service-b-svc-http-route"
            virtual_hosts:
            - name: "service-b-svc-http-route"
              domains:
                - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service1
          http_filters:
          - name: envoy.router
            config: {}

  clusters:
  - name: service1
    connect_timeout: 10s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 172.18.0.5
        port_value: 8080

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
